# WhatsText

./: .gitignore  Changelog.md  LICENSE  README.md  WhatsText.bat  WhatsText.command  pyproject.toml
src/whatstext/: exporter.py  extractor.py  generator.py  main.py  sanitizer.py  server.py  textparser.py
src/whatstext/assets/static/: script.js  style.css
src/whatstext/assets/templates/: chat_view.html  drop.html  pick_sender.html
src/whatstext/parser/: exporter.py  generator.py  textparser.py
src/whatstext/static/: style.css
src/whatstext/templates/: chat_view.html
tests/: test_generator.py  test_parser.py  test_sanitize.py
