[project]
name = "whatstext"
version = "0.0.1"
authors = [
  { name="sdemanas", email="manas.pande.sde@outlook.com" },
]
description = "Make WhatsApp exports interesting"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sdemanas/WhatsText"
Issues = "https://github.com/sdemanas/WhatsText/Issues/"